 [project]
name = "image-upscaler"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    # Optional: install onnxruntime to enable higher-quality U2-Net background removal.
    # Example: pip install onnxruntime
    # "onnxruntime>=1.15.0",
    "psycopg2-binary>=2.9.10",
]
